# MarvelStyleTransfer

./: README.md  pyproject.toml
images/: galaxy_art.jfif  style3.jfif
notebooks/: style_transfer_vgg19.ipynb
src/cost_function/: cost_function_calculator.py  utils.py
src/data_loaders/: image_loader.py
src/experiments/: base_experiment.py
src/models/: pretrained_vgg_net.py
