[tool.poetry]
name = "styletransfer"
version = "0.1.0"
description = ""
authors = ["suresha97 <suresha@tcd.ie>"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.20.2"
torch = "^1.10.1"
jupyter = "^1.0.0"
Pillow = "^8.4.0"
matplotlib = "^3.5.1"
torchvision = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
